--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,28 +1,12 @@
 header {
     width: 100%;
-    height: 7rem;
+    height: 8rem;
     display: flex;
     align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     background-color: gray;
-}
-
-h1 {
-    font-size: 5rem;
-}
-
-h2 {
-    font-size: 4rem;
-}
-
-h3 {
-    font-size: 3rem;
-}
-
-p, a {
-    font-size: 3rem;
 }
 
 nav {
@@ -44,61 +28,31 @@ nav {
 #hero-section {
     width: 100%;
     height: 100vh;
-    padding: 5rem;
+    padding: 0 5rem;
+
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-content: center;
+    align-content: baseline;
 }
 
-.hero {
-    width: 100%;
-    display: flex;
-    gap: 2rem;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.my-info {
-    width: 46rem;
-    text-align: justify;
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-}
-
-.my-links-icons {
-    display: flex;
-    align-items: center;
-}
-
-.link-icon {
-    font-size: 3rem;
-    margin-right: 1rem;
-}
-
-.tech-stack, .languages {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    margin-bottom: 3rem;
-}
-
-.tech-stack > p, .languages > p {
-    margin-right: 5rem;
-}
-
-.tech-icon, .language-icon {
-    width: 5rem;
-}
-
-.my-img {
-    width: 40vw;
-    height: 40vw;
-    border-radius: 50%;
+section {
+    max-width: 110rem;
+    margin: auto;
 }
 
 #about {
     padding: 5rem;
+    margin-bottom: 5rem;
     text-align: justify;
+}
+
+#projects {
+    padding: 0 5rem;
+}
+
+@media only screen and (max-width: 768px) {
+    #hero-section {
+        height: auto;
+    }
 }
