--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,47 @@
 html {
     font-size: 62.5%;
 }
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+h1 {
+    font-size: 5rem;
+    font-family: 'Concert One', 'Lato', sans-serif;
+}
+
+h2 {
+    font-size: 4rem;
+    font-family: 'Concert One', 'Lato', sans-serif;
+}
+
+h3 {
+    font-size: 3rem;
+}
+
+p, a {
+    font-size: 3rem;
+}
+
+img {
+    display: block;
+}
+
+@media only screen and (max-width: 510px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+
+    p, a {
+        font-size: 2rem;
+    }
+}
