--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -7,7 +7,7 @@
           <p>Hello! I'm Raquel. A Front-End Web Developer currently based in the province of Limburg, Belgium.</p>
           <div class="my-links-icons">
             <a><fa-icon class="link-icon" [icon]="['fab', 'github']"></fa-icon></a>
-            <a><fa-icon class="link-icon" [icon]="['fab', 'linkedin']"></fa-icon></a>
+            <!-- <a><fa-icon class="link-icon" [icon]="['fab', 'linkedin']"></fa-icon></a> -->
           </div>
         </div>
         <img class="my-img" src="../assets/images/Raquel Portrait 1280x1280 - Assinado.jpg" />
