--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,9 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: gray;
+    border-bottom: 0.1rem solid rgba(0, 0, 0, 0.3);
+    box-shadow: 0.2rem 0 0.5rem black;
+    background-color: white;
 }
 
 nav {
@@ -41,14 +43,28 @@ section {
     margin: auto;
 }
 
-#about {
+#about-section {
     padding: 5rem;
     margin-bottom: 5rem;
     text-align: justify;
 }
 
-#projects {
+#projects-section {
     padding: 0 5rem;
+}
+
+#contact-section {
+    margin-bottom: 5rem;
+}
+
+footer {
+    text-align: center;
+    padding: 5rem;
+    border-top: 0.1rem solid black;
+}
+
+footer > p {
+    font-size: 2rem;
 }
 
 @media only screen and (max-width: 768px) {
