Fix images source

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -10,27 +10,27 @@
             <!-- <a><fa-icon class="link-icon" [icon]="['fab', 'linkedin']"></fa-icon></a> -->
           </div>
         </div>
-        <img class="my-img" src="../assets/images/Raquel Portrait 1280x1280 - Assinado.jpg" />
+        <img class="my-img" src="assets/images/Raquel Portrait 1280x1280 - Assinado.jpg" />
       </div>
     </div>
     <div class="tech-stack">
       <p>Tech Stack</p>
       <ul class="tech-logos">
-        <li><img class="tech-icon" src="../assets/images/Logos/HTML5_Logo_256.png" /></li>
-        <li><img class="tech-icon" src="../assets/images/Logos/css3-8-1175200.webp" /></li>
-        <li><img class="tech-icon" src="../assets/images/Logos/javascript-2038874-1720087.webp" /></li>
-        <li><img class="tech-icon" src="../assets/images/Logos/logo-react-256.png" /></li>
-        <li><img class="tech-icon" src="../assets/images/Logos/redux-283024.webp" /></li>
+        <li><img class="tech-icon" src="assets/images/Logos/HTML5_Logo_256.png" /></li>
+        <li><img class="tech-icon" src="assets/images/Logos/css3-8-1175200.webp" /></li>
+        <li><img class="tech-icon" src="assets/images/Logos/javascript-2038874-1720087.webp" /></li>
+        <li><img class="tech-icon" src="assets/images/Logos/logo-react-256.png" /></li>
+        <li><img class="tech-icon" src="assets/images/Logos/redux-283024.webp" /></li>
       </ul>
     </div>
     <div class="languages">
       <p>Languages</p>
       <ul class="language-flags">
-        <li><img class="language-icon" src="../assets/images/Flags/Brazil-icon.png" /></li>
-        <li><img class="language-icon" src="../assets/images/Flags/United-kingdom-icon.png" /></li>
-        <li><img class="language-icon" src="../assets/images/Flags/Netherlands-icon.png" /></li>
-        <li><img class="language-icon" src="../assets/images/Flags/Custom-Icon-Design-Round-World-Flags-Japan.512.png" /></li>
-        <li><img class="language-icon" src="../assets/images/Flags/Germany-icon.png" /></li>
+        <li><img class="language-icon" src="assets/images/Flags/Brazil-icon.png" /></li>
+        <li><img class="language-icon" src="assets/images/Flags/United-kingdom-icon.png" /></li>
+        <li><img class="language-icon" src="assets/images/Flags/Netherlands-icon.png" /></li>
+        <li><img class="language-icon" src="assets/images/Flags/Custom-Icon-Design-Round-World-Flags-Japan.512.png" /></li>
+        <li><img class="language-icon" src="assets/images/Flags/Germany-icon.png" /></li>
       </ul>
     </div>
 </div>
