--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -9,3 +9,10 @@ h2 {
 .contact-content > a {
     font-size: 5rem;
 }
+
+@media only screen and (max-width: 510px) {
+    .contact-content {
+        width: 100%;
+        padding: 0;
+    }
+}
