--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -7,6 +7,7 @@ h2 {
     justify-content: center;
     margin: auto;
     margin-bottom: 5rem;
+    padding: 3rem;
     width: 100%;
     height: 50rem;
     gap: 5rem;
@@ -65,4 +66,50 @@ figure {
 img {
     width: 100%;
     border-radius: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+    .project {
+        flex-direction: column-reverse;
+        height: fit-content;
+        gap: 3rem;
+    }
+
+    .project-info {
+        width: 30rem;
+    }
+
+    .project-info .description {
+        font-size: 2rem;
+    }
+
+    figure {
+        width: 30rem;
+    }
+}
+
+@media only screen and (max-width: 510px) {
+    .project {
+        flex-direction: column-reverse;
+        height: fit-content;
+        padding: 2rem;
+        gap: 3rem;
+    }
+
+    .project-info {
+        width: 100%;
+        padding: 0;
+    }
+
+    .project-info .description {
+        font-size: 2rem;
+    }
+
+    .project-techs {
+        flex-wrap: wrap;
+    }
+
+    figure {
+        width: 100%;
+    }
 }
