--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -6,7 +6,7 @@
           <h2>Front-End Developer</h2>
           <p>Hello! I'm Raquel. A Front-End Web Developer currently based in the province of Limburg, Belgium.</p>
           <div class="my-links-icons">
-            <a><fa-icon class="link-icon" [icon]="['fab', 'github']"></fa-icon></a>
+            <a href="https://github.com/Randoraz"><fa-icon class="link-icon" [icon]="['fab', 'github']"></fa-icon></a>
             <!-- <a><fa-icon class="link-icon" [icon]="['fab', 'linkedin']"></fa-icon></a> -->
           </div>
         </div>
