--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -4,15 +4,22 @@ h2 {
 
 .contact-content {
     padding: 0 5rem;
+    min-height: 20rem;
 }
 
 .contact-content > a {
     font-size: 5rem;
+    transition: 500ms;
+}
+
+.contact-content > a:hover {
+    font-size: 7rem;
 }
 
 @media only screen and (max-width: 510px) {
     .contact-content {
         width: 100%;
         padding: 0;
+        min-height: 17rem;
     }
 }
