Add hover effects to the logo and to the hero images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <p class="my-name">Raquel</p>
+  <p class="my-name" (mouseenter)="hoverOverNameEffect()">RAQUEL</p>
   <nav>
     <a href="#hero-section">Home</a>
     <a href="#about-section">About</a>
@@ -22,4 +22,5 @@
 <footer>
   <p>© Copyright - Raquel Costa Freire - 2023</p>
   <p>All rights reserved. No reproduction without permission.</p>
+  <a href="https://www.flaticon.com/free-icons/portfolio" target="_blank" title="portfolio icons">Portfolio icons created by Freepik - Flaticon</a>
 </footer>
