--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,6 +9,7 @@ header {
     border-bottom: 0.1rem solid var(--main-purple);
     box-shadow: 0.2rem 0 0.5rem var(--main-purple);
     background-color: var(--dark-purple);
+    z-index: 1;
 }
 
 nav {
@@ -27,15 +28,39 @@ nav a {
     color: var(--main-white);
 }
 
+footer a {
+    font-size: 2rem;
+}
+
 .my-name {
     margin-left: 2rem;
+    font-family: "Concert One", Lato, sans-serif;
+    font-size: 5rem;
+}
+
+.my-name:hover {
+    background-color: var(--main-purple);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    animation: rainbowEffect 2s linear infinite alternate;
+}
+
+@keyframes rainbowEffect {
+    from {
+        filter: hue-rotate(0);
+    }
+
+    to {
+        filter: hue-rotate(360deg);
+    }
 }
 
 #hero-section {
     width: 100%;
     height: 100vh;
     padding: 0 5rem;
-
+    z-index: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -47,7 +72,7 @@ section {
     margin: auto;
 }
 
-#about-section {
+#about-section, #contact-section  {
     padding: 5rem;
     margin-bottom: 5rem;
     text-align: justify;
@@ -57,12 +82,6 @@ section {
 
 #projects-section {
     padding: 0 5rem;
-}
-
-#contact-section {
-    margin-bottom: 5rem;
-    background-color: var(--alternative-black);
-    border-radius: 10px;
 }
 
 footer {
@@ -86,17 +105,7 @@ footer > p {
     }
 }
 
-@media only screen and (max-width: 510px) {
-    #hero-section, #about-section, #projects-section, #contact-section {
-        width: 100%;
-        padding: 0 2rem;
-        margin-bottom: 5rem;
-    }
-
-    #about-section {
-        padding-bottom: 2rem;
-    }
-
+@media only screen and (max-width: 650px) {
     .my-name {
         display: none;
     }
@@ -106,5 +115,19 @@ footer > p {
         width: 100%;
         justify-content: space-around;
         gap: 0;
+    }
+}
+
+@media only screen and (max-width: 510px) {
+    #about-section, #contact-section {
+        width: 100%;
+        padding: 2rem;
+        margin-bottom: 5rem;
+    }
+
+    #hero-section, #projects-section {
+        width: 100%;
+        padding: 0 2rem;
+        margin-bottom: 5rem;
     }
 }
