--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,4 +1,4 @@
-h2 {
+p {
     padding: 1rem 0;
 }
 
@@ -19,7 +19,7 @@ h2 {
 @media only screen and (max-width: 510px) {
     .contact-content {
         width: 100%;
+        min-height: 18rem;
         padding: 0;
-        min-height: 17rem;
     }
 }
