--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -83,6 +83,43 @@ li {
     width: 5rem;
 }
 
+figure {
+    position: relative;
+    z-index: 0;
+}
+
+figcaption {
+    color: var(--main-white);
+    font-size: 2rem;
+    font-family: Lato, sans-serif;
+    text-align: center;
+    position: absolute;
+    opacity: 0;
+    transition: opacity 500ms;
+}
+
+.tech-figcaption {
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -150%);
+}
+
+.language-figcaption {
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 100%);
+}
+
+figure:hover figcaption {
+    opacity: 1;
+}
+
+.my-img-figure {
+    border-radius: 50%;
+    border: 0.3rem solid var(--main-purple);
+    box-shadow: 0.1rem 0.1rem 0.5rem var(--main-purple);
+}
+
 .my-img {
     max-width: 40rem;
     width: 40vw;
