Add Linkedin link to hero and contact sections

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -7,7 +7,7 @@
           <p>Hello! I'm Raquel. A Front-End Web Developer currently based in the province of Limburg, Belgium.</p>
           <div class="my-links-icons">
             <a href="https://github.com/Randoraz"><fa-icon class="link-icon" [icon]="['fab', 'github']"></fa-icon></a>
-            <!-- <a><fa-icon class="link-icon" [icon]="['fab', 'linkedin']"></fa-icon></a> -->
+            <a href="https://www.linkedin.com/in/raquel-costa-freire-717036273/"><fa-icon class="link-icon" [icon]="['fab', 'linkedin']"></fa-icon></a>
           </div>
         </div>
         <figure class="my-img-figure" (mouseenter)="onMouseEnterImg()" (mouseleave)="onMouseLeaveImg()">
