--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -10,6 +10,7 @@ p {
 .contact-content > a {
     font-size: 5rem;
     transition: 500ms;
+    margin-right: 2rem;
 }
 
 .contact-content > a:hover {
