--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,8 @@
     <h3>Junior Front-End Developer living in Belgium</h3>
     <p>
     I'm a brazilian biologist who found her second passion in programming. I started learning how to code years ago, but decided to pursue it
-    professionally when I came to live in Belgium. I have good skills in HTML, CSS, Javascript, React and Redux. I'm currently teaching myself
-    Typescript and Angular. I'm always interested in learning new technologies. 
+    professionally when I came to live in Belgium. I have good skills in HTML, CSS, Javascript, React and Redux. 
+    Having completed the Front-End bit, I'm currently doing the Back-End bit of a online Full-Stack Engineer course. 
+    In addition to that, I'm also teaching myself Typescript and Angular. I'm always interested in learning new technologies. 
     </p>
 </div>
