--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -185,4 +185,10 @@ figure:hover figcaption {
         padding-top: 1rem;
         display: flex;
     }
+
+    .tech-figcaption {
+        top: auto;
+        bottom: 0;
+        transform: translate(-50%, 125%);
+    }
 }
