--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,9 +2,17 @@
     <h2>About Me</h2>
     <h3>Junior Front-End Developer living in Belgium</h3>
     <p>
-    I'm a brazilian biologist who found her second passion in programming. I started learning how to code years ago, but decided to pursue it
-    professionally when I came to live in Belgium. I have good skills in HTML, CSS, Javascript, React and Redux. 
-    Having completed the Front-End bit, I'm currently doing the Back-End bit of a online Full-Stack Engineer course. 
-    In addition to that, I'm also teaching myself Typescript and Angular. I'm always interested in learning new technologies. 
+        I'm a brazilian biologist who found her second passion in programming. I started learning how to code years ago, but decided to pursue it
+        professionally when I came to live in Belgium. I have good skills in HTML, CSS, Javascript, React and Redux. 
+        Having completed the Front-End bit, I'm currently doing the Back-End bit of a online Full-Stack Engineer course. 
+        In addition to that, I'm also teaching myself Typescript and Angular. I'm always interested in learning new technologies. 
+    </p>
+
+    <h3>My Journey</h3>
+    <p>
+        After graduating in Brazil, I lived in Japan for two years. During the first year, I went to a Japanese language school and got to meet
+        many people from various countries. On the second year, I worked as a Assistant Language Teacher, teaching English in two elementary schools.
+        During that time, I started studying web development. I came to live in Belgium in April of 2022. After following an intensive Dutch course
+        for 5 months, I'm now looking for a job while still making projects and learning by myself!
     </p>
 </div>
