--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <nav>
     <a href="#hero-section">Home</a>
     <a href="#about-section">About</a>
+    <a href="#cv-section">CV</a>
     <a href="#projects-section">Projects</a>
     <a href="#contact-section">Contact</a>
   </nav>
@@ -12,6 +13,9 @@
 </section>
 <section id="about-section">
   <app-about></app-about>
+</section>
+<section id="cv-section">
+  <app-cv></app-cv>
 </section>
 <section id="projects-section">
   <app-projects [projectsList]="projects"></app-projects>
