--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,5 +2,5 @@
     <h2>Contact</h2>
     <p>You can contact me through email or Linkedin!</p>
     <a href="mailto:raquelcostafreire@gmail.com"><fa-icon [icon]="['fas', 'square-envelope']"></fa-icon></a>
-    <a href="https://www.linkedin.com/in/raquel-costa-freire-717036273/"><fa-icon class="link-icon" [icon]="['fab', 'linkedin']"></fa-icon></a>
+    <a href="https://www.linkedin.com/in/raquel-costa-freire-717036273/" target="_blank"><fa-icon class="link-icon" [icon]="['fab', 'linkedin']"></fa-icon></a>
 </div>
