--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -72,16 +72,21 @@ section {
     margin: auto;
 }
 
-#about-section, #contact-section  {
+#about-section, #projects-section  {
     padding: 5rem;
-    margin-bottom: 5rem;
     text-align: justify;
     background-color: var(--alternative-black);
     border-radius: 10px;
 }
 
-#projects-section {
-    padding: 0 5rem;
+#cv-section {
+    padding: 5rem;
+    margin-bottom: 5rem;
+    text-align: justify;
+}
+
+#contact-section {
+    padding: 5rem;
 }
 
 footer {
@@ -103,6 +108,10 @@ footer > p {
     #about-section, #contact-section {
         border-radius: 0;
     }
+
+    nav a {
+        font-size: 2.4rem;
+    }
 }
 
 @media only screen and (max-width: 650px) {
@@ -119,13 +128,16 @@ footer > p {
 }
 
 @media only screen and (max-width: 510px) {
-    #about-section, #contact-section {
+    #about-section, #cv-section, #projects-section {
         width: 100%;
         padding: 2rem;
+    }
+
+    #projects-section {
         margin-bottom: 5rem;
     }
 
-    #hero-section, #projects-section {
+    #hero-section, #contact-section {
         width: 100%;
         padding: 0 2rem;
         margin-bottom: 5rem;
