--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<header>
-  <p class="my-name" (mouseenter)="hoverOverNameEffect()">RAQUEL</p>
+<header #header>
+  <p class="my-name" (mouseenter)="hoverOverNameEffect($event)">RAQUEL</p>
   <nav>
     <a href="#hero-section">Home</a>
     <a href="#about-section">About</a>
