--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,7 +12,7 @@
     <p>
         After graduating in Brazil, I lived in Japan for two years. During the first year, I went to a Japanese language school and got to meet
         many people from various countries. On the second year, I worked as a Assistant Language Teacher, teaching English in two elementary schools.
-        During that time, I started studying web development. I came to live in Belgium in April of 2022. After following an intensive Dutch course
-        for 5 months, I'm now looking for a job while still making projects and learning by myself!
+        During that time, I started studying web development. I came to live in Belgium in April of 2022, followed an intensive Dutch course
+        for 5 months, and now I'm working as an intern at Dover Fueling Solutions.
     </p>
 </div>
