--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -38,6 +38,18 @@
         </li>
         <li>
           <figure>
+            <img class="tech-icon" src="assets/images/Logos/typescript.png" alt="Typescript icon" />
+            <figcaption class="tech-figcaption">Typescript</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img class="tech-icon" src="assets/images/Logos/angular-226066.webp" alt="Angular icon" />
+            <figcaption class="tech-figcaption">Angular</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
             <img class="tech-icon" src="assets/images/Logos/logo-react-256.png" alt="React icon" />
             <figcaption class="tech-figcaption">React</figcaption>
           </figure>
