--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -3,16 +3,20 @@
     <div class="experience-div">
         <h3>Experience</h3>
         <div class="experience-info">
-            <h4>Monitor of the Cell Biology Laboratory</h4>
-            <p>Federal University of Ceará (Brazil) - 2015</p>
+            <h4>Front-End Developer (Internship)</h4>
+            <p>Dover Fueling Solutions (Belgium) - 07/2023~Current job</p>
+        </div>
+        <div class="experience-info">
+            <h4>Language Teacher Assistant (English)</h4>
+            <p>Heart Corporation (Japan) - 2021~2022</p>
         </div>
         <div class="experience-info">
             <h4>Supervised Internship held at the Experimental Laboratory of Behavioral Ecology and Evolution</h4>
             <p>Federal University of Ceará (Brazil) - 2017</p>
         </div>
         <div class="experience-info">
-            <h4>Language Teacher Assistant (English)</h4>
-            <p>Heart Corporation (Japan) - 2021~2022</p>
+            <h4>Monitor of the Cell Biology Laboratory</h4>
+            <p>Federal University of Ceará (Brazil) - 2015</p>
         </div>
     </div>
     
@@ -20,6 +24,7 @@
         <h3>Education</h3>
         <div class="education-info">
             <h4>Bachelor of Biological Sciences</h4>
+            <p>Equivalent to <b>Master</b> degree in Belgium</p>
             <p>Federal University of Ceará (Brazil) - 2014~2019</p>
         </div>
         <div class="education-info">
